@@ -15,3 +15,6 @@ GEOMETRYCOLLECTION(POINT(1 1),LINESTRING(2 2,3 3))|0700020100020202000204040202
 GEOMETRYCOLLECTION(MULTIPOINT(1 1,2 2),POINT(78 -78),POLYGON((1 1,1 2,2 2,2 1,1 1)))|0700030400020202020201009c019b010300010502020002020000010100
 0701000802040201010800020008020201000202040202020104
 large geometry|060001019201aac755e8fea406061b52091c08260f1c08141c0524034c0d12153a211c0f06000e202c011a302e200e0e0702131923102d3e05460d341924071a100e0e121e093804261a02081b002f081f1227141d2015220f5a1d2c09240d0a05010b1b0515060908331645121f1017081f1a1f36150a1f1f00150411120d14150c31161f0417010f170f1d0429220f1a152c100808101820021207141f0e11020903031105270f2f2d370f071113001f1e0b16032211542326021a0c1c0b182f0a290c07220106100a080e0b4e3a0410051a042016161607041107190f230b210735091f091105051d02631c1900170e0b150d3d110927081d0a0f0b1819080f0205030f190f17044d241d12211c19220b14092c134019303304210545012f060504061827380524100e36232205
+Removing of duplicate points LINESTRING|020003020202020201
+Removing of duplicate points POLYGON|0300010502020002020000010100
+Not Removing from MULTIPOINT|0400040202020200000201
